# prism

./: .bazelrc.in  .clang-tidy  .clangd  .gitignore  BUILD  DEMO_RESULTS.md  FINAL_IMPLEMENTATION_SUMMARY.md  MODULE.bazel  Makefile  Makefile.am  Makefile.in  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  autogen.sh  config.bzl.in  configure.ac  constants.bzl  install.sh.in  llvm_rule.bzl  report.html
.github/workflow/: docker-ci.yml
.github/workflows/: docker-ci.yml  performance.yml
benchmark_results/: benchmark_2025-05-29_17-48-36.json  benchmark_2025-06-01_17-48-36.json  benchmark_2025-06-04_17-48-36.json  benchmark_2025-06-07_17-48-36.json  benchmark_2025-06-10_17-48-36.json  benchmark_2025-06-13_17-48-36.json  benchmark_2025-06-16_17-48-36.json  benchmark_2025-06-19_17-48-36.json  benchmark_2025-06-22_17-48-36.json  benchmark_2025-06-25_17-48-36.json  benchmark_2025-06-28_17-58-22.json  raw_benchmark_output_2025-07-01_22-56-08.txt  raw_benchmark_output_2025-07-01_23-05-25.txt
docs/: API_REFERENCE.md  GETTING_STARTED.md
performance_reports/: performance_dashboard_20250628_174845.html
src/: BUILD  debug.h  debug_vector-inl.h  eft.h  generic_vector-inl.h  generic_vector.h  prism.h  random-inl.h  sr_scalar-inl.h  sr_scalar.h  sr_scalar_dynamic.cpp  sr_scalar_static.cpp  sr_vector-inl.h  sr_vector.cpp  sr_vector.h  sr_vector_dynamic.cpp  sr_vector_static.cpp  target_utils.h  ud_scalar-inl.h  ud_scalar.h  ud_scalar_dynamic.cpp  ud_scalar_static.cpp  ud_vector-inl.h  ud_vector.cpp  ud_vector.h  ud_vector_dynamic.cpp  ud_vector_static.cpp  utils.h  vector_types.h  xoshiro.h  xoshiro_vector.cpp
tests/: BUILD  helper.h  macros.bzl
tests/helper/: BUILD  README_robust_testing.md  assert-inl.h  assert.h  binomial_test.h  common.h  counter.h  distance.h  operator-inl.h  operator.h  pprint.h  random.h  robust_statistical_test.h  tests-inl.h  tests.h
tests/performance/: BUILD  benchmark_suite.h  performance_regression_test.cpp
tests/scalar/: BUILD  test_get_exponent.cpp  test_get_pow2.cpp  test_get_predabs.cpp  test_single_sr.cpp  test_single_ud.cpp  test_sr_accuracy.cpp  test_twoprodfma.cpp  test_twosum.cpp  test_ud_accuracy.cpp
tests/vector/: BUILD  test_dekkerprod.cpp  test_fma.cpp  test_get_exponent.cpp  test_get_pow2.cpp  test_single_sr.cpp  test_single_ud.cpp  test_split.cpp  test_splitbit.cpp  test_sr_accuracy.cpp  test_sr_performance.cpp  test_sr_performance_static.cpp  test_threads.cpp  test_twosum.cpp  test_ud_accuracy.cpp  test_ud_performance.cpp  test_ud_performance_dynamic.cpp  test_ud_performance_static.cpp  test_xoshiro.cpp  test_xoshiro_api.cpp
tools/: create_sample_data.py  performance_dashboard.py  requirements.txt  run_existing_perf_tests.sh  run_performance_analysis.sh
